--- a/aula 10/index.html
+++ b/aula 10/index.html
@@ -14,15 +14,30 @@
 
 
         <p>
-            <strong>Quido Bila</strong> <br>
-            Ola, eu chamo me Quido Bila. sou de Mocambique, estou estudando desenvolvimento web atraves do curso em video de <a href="#">Gustavo Guanabarra</a> estou muito feliz porque estou tendo um grande progresso
+            <strong>Quido Bila</strong> <br> <br>
+            Ola, eu chamo me Quido Bila. sou de Mocambique, estou estudando desenvolvimento web atraves do curso em video de <a href="#">Gustavo Guanabarra</a> estou muito feliz porque estou tendo um grande progresso.
         </p>
         <section id="contactos">
-            <a href="#"><img src="imagens/logo-facebook.jpg" alt="Facebook"> Acesse o meu facebook</a>
-            <a href="#"><img src="imagens/logo-instagram.jpg" alt="Instagram"> Acesse o meu insta</a>
-            <a href="#"><img src="imagens/logo-twitter.jpg" alt="Twitter"> Acesse o meu twitter</a>
-            <a href="#"><img src="imagens/logo-github.jpg" alt="Github"> Acesse o meu repositorio</a>
-            <a href="#"><img src="imagens/logo-youtube.jpg" alt="Youtube"> Acesse o meu canal</a>
+            <div>
+                <img src="imagens/logo-facebook.jpg" alt="Facebook">
+                <a href="#"> Acesse o meu facebook</a>
+            </div>
+            <div>
+                <img src="imagens/logo-instagram.jpg" alt="Instagram">
+                <a href="#">  Acesse o meu insta</a>
+            </div>
+            <div>
+                <img src="imagens/logo-twitter.jpg" alt="Twitter">
+                <a href="#"> Acesse o meu twitter</a>
+            </div>
+            <div>
+                <img src="imagens/logo-github.jpg" alt="Github">
+                <a href="#"> Acesse o meu repositorio</a>
+            </div>
+            <div>
+                <img src="imagens/logo-youtube.jpg" alt="Youtube">
+                <a href="#"> Acesse o meu canal</a>
+            </div>
         </section>
     </main>
 </body>
