--- a/aula 01/index.html
+++ b/aula 01/index.html
@@ -12,7 +12,7 @@
         }
 
         main{
-            width: 900px;
+            width: 70vw;
             margin: auto;
             border-radius: 8px;
             padding: 9px;
