--- a/aula 02/index.html
+++ b/aula 02/index.html
@@ -12,7 +12,7 @@
         }
 
         main{
-            width: 900px;
+            width: 70vw;
             margin: auto;
             background-color: white;
             padding: 12px;
