--- a/aula 10/index.html
+++ b/aula 10/index.html
@@ -20,23 +20,23 @@
         <section id="contactos">
             <div>
                 <img src="imagens/logo-facebook.jpg" alt="Facebook">
-                <a href="#"> Acesse o meu facebook</a>
+                <a href="https://web.facebook.com/kido.bila.1" target="_self"> Acesse o meu facebook</a>
             </div>
             <div>
                 <img src="imagens/logo-instagram.jpg" alt="Instagram">
-                <a href="#">  Acesse o meu insta</a>
+                <a href="https://www.instagram.com/kidobila/" target="_self">  Acesse o meu insta</a>
             </div>
             <div>
                 <img src="imagens/logo-twitter.jpg" alt="Twitter">
-                <a href="#"> Acesse o meu twitter</a>
+                <a href="https://twitter.com/kiid_son" target="_self"> Acesse o meu twitter</a>
             </div>
             <div>
                 <img src="imagens/logo-github.jpg" alt="Github">
-                <a href="#"> Acesse o meu repositorio</a>
+                <a href="https://github.com/QuidoBila" target="_self"> Acesse o meu repositorio</a>
             </div>
             <div>
                 <img src="imagens/logo-youtube.jpg" alt="Youtube">
-                <a href="#"> Acesse o meu canal</a>
+                <a href="https://www.youtube.com/channel/UC3jNK9wioMvSgZva31iMQBQ/featured" target="_self"> Acesse o meu canal</a>
             </div>
         </section>
     </main>
