--- a/aula 12/index.html
+++ b/aula 12/index.html
@@ -120,7 +120,10 @@
     </main>
     <footer>
         <p> &copy; Copyright</p>
-        <p>   Site desenvolvido por <a href="https://web.facebook.com/kido.bila.1"> <strong>Quido Bila</strong></a></p>
+        <p>
+            Site desenvolvido por <a href="https://web.facebook.com/kido.bila.1"> <strong>Quido Bila</strong></a>
+        </p>
+        <p>Politica de privacidade e informacoes legais</p>
     </footer>
 
     <script src="assets/menu.js">
