--- a/aula 12/index.html
+++ b/aula 12/index.html
@@ -31,7 +31,7 @@
         <div class="mobile-menu" id="itens">
             <ul>
                 <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Services</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">About</a></li>
             </ul>
 
