--- a/aula 12/index.html
+++ b/aula 12/index.html
@@ -25,7 +25,7 @@
             </div>
         </nav>
         <div class="mobile-menu-icon">
-            <button><img src="assets/menu_white.svg" alt="Menu" onclick="mostrar()"></button>
+            <button><img src="assets/menu_white.svg" alt="Menu" onclick="mostrar()" class="icon"></button>
         </div>
 
         <div class="mobile-menu" id="itens">
